initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from e:\STUDY\HK222\PPL_MR\Phase 1\initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from lexererr import *




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'float'", "'for'", "'function'", "'if'", "'integer'", 
                     "'return'", "'string'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
                     "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "Binary1", "Binary2", "Binary4", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FLOAT", "FOR", 
                      "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", "WHILE", 
                      "VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "NEG", "AND", "OR", "EQUAL", "DIF", "PLUS", "SUB", 
                      "MUL", "DIV", "MOD", "LT", "LTE", "GT", "GTE", "CONC", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "DOT", "COMMA", 
                      "SEMI", "COLON", "ASSIGN", "INTTYPE", "FLOATTYPE", 
                      "BOOLTYPE", "STRINGTYPE", "IDENTIFIER", "CPPCMT", 
                      "CCMT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_arrdcl = 3
    RULE_atom = 4
    RULE_intlist = 5
    RULE_variabledcl = 6
    RULE_vardcl_full = 7
    RULE_vardcl_short = 8
    RULE_idlist = 9
    RULE_paradcl = 10
    RULE_paratype = 11
    RULE_funcdcl = 12
    RULE_functype = 13
    RULE_paralist = 14
    RULE_paraprime = 15
    RULE_expr = 16
    RULE_expr1 = 17
    RULE_expr2 = 18
    RULE_expr3 = 19
    RULE_expr4 = 20
    RULE_expr5 = 21
    RULE_expr6 = 22
    RULE_expr7 = 23
    RULE_sub_expr = 24
    RULE_arraylit = 25
    RULE_nullable_explist = 26
    RULE_idexop = 27
    RULE_func_call = 28
    RULE_stmt = 29
    RULE_null_stmt = 30
    RULE_assignstmt = 31
    RULE_lhs = 32
    RULE_ifstmt = 33
    RULE_forstmt = 34
    RULE_assign = 35
    RULE_whilestmt = 36
    RULE_dwstmt = 37
    RULE_brkstmt = 38
    RULE_constmt = 39
    RULE_rtrnstmt = 40
    RULE_exprlist = 41
    RULE_callstmt = 42
    RULE_blockstmt = 43
    RULE_stmtlist = 44
    RULE_stmtprime = 45
    RULE_stmttype = 46

    ruleNames =  [ "program", "decllist", "decl", "arrdcl", "atom", "intlist", 
                   "variabledcl", "vardcl_full", "vardcl_short", "idlist", 
                   "paradcl", "paratype", "funcdcl", "functype", "paralist", 
                   "paraprime", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "sub_expr", "arraylit", "nullable_explist", 
                   "idexop", "func_call", "stmt", "null_stmt", "assignstmt", 
                   "lhs", "ifstmt", "forstmt", "assign", "whilestmt", "dwstmt", 
                   "brkstmt", "constmt", "rtrnstmt", "exprlist", "callstmt", 
                   "blockstmt", "stmtlist", "stmtprime", "stmttype" ]

    EOF = Token.EOF
    Binary1=1
    Binary2=2
    Binary4=3
    AUTO=4
    BREAK=5
    BOOLEAN=6
    DO=7
    ELSE=8
    FLOAT=9
    FOR=10
    FUNCTION=11
    IF=12
    INTEGER=13
    RETURN=14
    STRING=15
    WHILE=16
    VOID=17
    OUT=18
    CONTINUE=19
    OF=20
    INHERIT=21
    ARRAY=22
    NEG=23
    AND=24
    OR=25
    EQUAL=26
    DIF=27
    PLUS=28
    SUB=29
    MUL=30
    DIV=31
    MOD=32
    LT=33
    LTE=34
    GT=35
    GTE=36
    CONC=37
    LB=38
    RB=39
    LSB=40
    RSB=41
    LCB=42
    RCB=43
    DOT=44
    COMMA=45
    SEMI=46
    COLON=47
    ASSIGN=48
    INTTYPE=49
    FLOATTYPE=50
    BOOLTYPE=51
    STRINGTYPE=52
    IDENTIFIER=53
    CPPCMT=54
    CCMT=55
    WS=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.decllist()
            self.state = 95
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.decl()
                self.state = 98
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variabledcl(self):
            return self.getTypedRuleContext(MT22Parser.VariabledclContext,0)


        def funcdcl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.variabledcl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.funcdcl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrdclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atom(self):
            return self.getTypedRuleContext(MT22Parser.AtomContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrdcl




    def arrdcl(self):

        localctx = MT22Parser.ArrdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arrdcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MT22Parser.ARRAY)
            self.state = 108
            self.match(MT22Parser.LSB)
            self.state = 109
            self.intlist()
            self.state = 110
            self.match(MT22Parser.RSB)
            self.state = 111
            self.match(MT22Parser.OF)
            self.state = 112
            self.atom()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atom




    def atom(self):

        localctx = MT22Parser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def INTTYPE(self):
            return self.getToken(MT22Parser.INTTYPE, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_intlist




    def intlist(self):

        localctx = MT22Parser.IntlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_intlist)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(MT22Parser.INTTYPE)
                self.state = 117
                self.match(MT22Parser.COMMA)
                self.state = 119
                self.intlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(MT22Parser.INTTYPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariabledclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def vardcl_full(self):
            return self.getTypedRuleContext(MT22Parser.Vardcl_fullContext,0)


        def vardcl_short(self):
            return self.getTypedRuleContext(MT22Parser.Vardcl_shortContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variabledcl




    def variabledcl(self):

        localctx = MT22Parser.VariabledclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variabledcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 123
                self.vardcl_full()
                pass

            elif la_ == 2:
                self.state = 124
                self.vardcl_short()
                pass


            self.state = 127
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardcl_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardcl_full(self):
            return self.getTypedRuleContext(MT22Parser.Vardcl_fullContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def paratype(self):
            return self.getTypedRuleContext(MT22Parser.ParatypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardcl_full




    def vardcl_full(self):

        localctx = MT22Parser.Vardcl_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardcl_full)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(MT22Parser.IDENTIFIER)
                self.state = 130
                self.match(MT22Parser.COMMA)
                self.state = 131
                self.vardcl_full()
                self.state = 132
                self.match(MT22Parser.COMMA)
                self.state = 133
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(MT22Parser.IDENTIFIER)
                self.state = 136
                self.match(MT22Parser.COLON)
                self.state = 137
                self.paratype()
                self.state = 138
                self.match(MT22Parser.ASSIGN)
                self.state = 139
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardcl_shortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def paratype(self):
            return self.getTypedRuleContext(MT22Parser.ParatypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardcl_short




    def vardcl_short(self):

        localctx = MT22Parser.Vardcl_shortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardcl_short)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.idlist()
            self.state = 144
            self.match(MT22Parser.COLON)
            self.state = 145
            self.paratype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idlist)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(MT22Parser.IDENTIFIER)
                self.state = 148
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParadclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def paratype(self):
            return self.getTypedRuleContext(MT22Parser.ParatypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paradcl




    def paradcl(self):

        localctx = MT22Parser.ParadclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paradcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 154
                self.match(MT22Parser.INHERIT)


            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 157
                self.match(MT22Parser.OUT)


            self.state = 160
            self.match(MT22Parser.IDENTIFIER)
            self.state = 161
            self.match(MT22Parser.COLON)
            self.state = 162
            self.paratype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParatypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def arrdcl(self):
            return self.getTypedRuleContext(MT22Parser.ArrdclContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paratype




    def paratype(self):

        localctx = MT22Parser.ParatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paratype)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.arrdcl()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def functype(self):
            return self.getTypedRuleContext(MT22Parser.FunctypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdcl




    def funcdcl(self):

        localctx = MT22Parser.FuncdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcdcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(MT22Parser.IDENTIFIER)
            self.state = 173
            self.match(MT22Parser.COLON)
            self.state = 174
            self.match(MT22Parser.FUNCTION)
            self.state = 175
            self.functype()
            self.state = 176
            self.match(MT22Parser.LB)
            self.state = 177
            self.paralist()
            self.state = 178
            self.match(MT22Parser.RB)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 179
                self.match(MT22Parser.INHERIT)
                self.state = 180
                self.match(MT22Parser.IDENTIFIER)


            self.state = 183
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def arrdcl(self):
            return self.getTypedRuleContext(MT22Parser.ArrdclContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_functype




    def functype(self):
